# arquivos

./: frances.py  helena.txt  portugues.py  pyproject.toml
