[tool.poetry]
name = "arquivos"
version = "0.1.0"
description = "trabalho arquivos"
authors = ["Camila Gomes <camilagomesbsi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
